<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.manlin.carmap.MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >

        <RadioButton
            android:text="@string/ab_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton1"
            android:contentDescription="10"
            android:checked="true" />
        <RadioButton
            android:text="@string/ab_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton2"
            android:contentDescription="15" />

        <RadioButton
            android:text="@string/ab_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton3"
            android:contentDescription="20" />

        <RadioButton
            android:text="@string/ab_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton4"
            android:contentDescription="30" />
    </RadioGroup>

    <Button
        android:text="@string/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button" />

    <Button
        android:text="@string/button_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:id="@+id/button2" />

    <TextView
        android:text="@string/view_inv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="26dp"
        android:id="@+id/group2" >

        <RadioButton
            android:text="@string/ab_21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton21"
            android:contentDescription="30"
            android:checked="true" />

        <RadioButton
            android:text="@string/ab_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton22"
            android:contentDescription="60" />

        <RadioButton
            android:text="@string/ab_23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton23"
            android:contentDescription="90" />

        <RadioButton
            android:text="@string/ab_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton24"
            android:contentDescription="120" />

        </RadioGroup>

    <TextView
        android:text="@string/view_push"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_weight="1"

        android:layout_alignRight="@+id/group2"
        android:layout_alignEnd="@+id/group2" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group3"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2">
        <RadioButton
            android:text="@string/set_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton31"
            android:contentDescription="1"
            android:checked="true" />
        <RadioButton
            android:text="@string/unset_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioButton32"
            android:contentDescription="2" />
        </RadioGroup>

    <TextView
        android:text="@string/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/group3"
        android:layout_alignStart="@+id/group3" />


</RelativeLayout>
